# ocr-api-40c9434c8-b28b-47a3-8b98-519be4e3540f

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: process_lead_service.py  server.py
